# alien-invaders

./: CMakeLists.txt  README.md  main.cpp
include/: Bullet.h  BulletManager.h  IndexBuffer.h  Player.h  Shader.h  VAO.h  VBO.h  errorHandle.h  loadShaders.h
lib/: Bullet.cpp  BulletManager.cpp  IndexBuffer.cpp  Player.cpp  Shader.cpp  VAO.cpp  VBO.cpp  errorHandle.cpp  loadShaders.cpp
res/: 04_03_Shader.frag  bullet_shader.vert  simple_shader.frag  simple_shader.vert
